--- a/YoutubeDL/controllers/TwitterDLViewController.xib
+++ b/YoutubeDL/controllers/TwitterDLViewController.xib
@@ -11,9 +11,7 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="TwitterDLViewController" customModule="YoutubeDL" customModuleProvider="target">
             <connections>
                 <outlet property="errorLabel" destination="F1w-QK-TSc" id="tfW-hY-s2s"/>
-                <outlet property="progressBar" destination="E8h-SA-kV3" id="YAl-sZ-96V"/>
-                <outlet property="thumbnailDisplay" destination="79k-Nf-jQh" id="CS2-6k-UsD"/>
-                <outlet property="videoControlsView" destination="QhD-DV-Vla" id="qfg-gi-6yB"/>
+                <outlet property="videoPlayerController" destination="VIw-MO-Blm" id="9kK-0a-IG7"/>
                 <outlet property="view" destination="fO9-WW-xd3" id="SXn-2D-gvR"/>
             </connections>
         </placeholder>
@@ -22,60 +20,26 @@
             <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VIw-MO-Blm" customClass="VideoPlayerViewController" customModule="YoutubeDL" customModuleProvider="target">
+                    <rect key="frame" x="10" y="44" width="394" height="245.5"/>
+                    <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                </view>
                 <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Error Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="F1w-QK-TSc">
-                    <rect key="frame" x="10" y="353.5" width="394" height="20.5"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <rect key="frame" x="169.5" y="297.5" width="75" height="18"/>
+                    <fontDescription key="fontDescription" style="UICTFontTextStyleSubhead"/>
                     <color key="textColor" systemColor="systemRedColor" red="1" green="0.23137254900000001" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="E8h-SA-kV3">
-                    <rect key="frame" x="10" y="289.5" width="394" height="2"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="2" id="z1e-SX-J4A" userLabel="Progress Bar Shrinker"/>
-                    </constraints>
-                </progressView>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zot-me-eYY" userLabel="Thumbnail Container View">
-                    <rect key="frame" x="10" y="44" width="394" height="245.5"/>
-                    <subviews>
-                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="79k-Nf-jQh">
-                            <rect key="frame" x="0.0" y="0.0" width="394" height="245.5"/>
-                        </imageView>
-                    </subviews>
-                    <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                    <constraints>
-                        <constraint firstItem="79k-Nf-jQh" firstAttribute="centerY" secondItem="zot-me-eYY" secondAttribute="centerY" id="0WP-eU-1Nz"/>
-                        <constraint firstItem="79k-Nf-jQh" firstAttribute="width" relation="lessThanOrEqual" secondItem="zot-me-eYY" secondAttribute="width" id="PKY-xk-P0S"/>
-                        <constraint firstItem="79k-Nf-jQh" firstAttribute="leading" secondItem="zot-me-eYY" secondAttribute="leading" priority="250" id="V3a-lL-M97"/>
-                        <constraint firstItem="79k-Nf-jQh" firstAttribute="top" secondItem="zot-me-eYY" secondAttribute="top" priority="250" id="gOH-s1-OSi"/>
-                        <constraint firstAttribute="bottom" secondItem="79k-Nf-jQh" secondAttribute="bottom" priority="250" id="gQY-FV-fCn"/>
-                        <constraint firstAttribute="trailing" secondItem="79k-Nf-jQh" secondAttribute="trailing" priority="250" id="kNg-jt-bpO"/>
-                        <constraint firstItem="79k-Nf-jQh" firstAttribute="height" relation="lessThanOrEqual" secondItem="zot-me-eYY" secondAttribute="height" id="o4X-Zc-IjR"/>
-                        <constraint firstItem="79k-Nf-jQh" firstAttribute="centerX" secondItem="zot-me-eYY" secondAttribute="centerX" id="xqC-h2-Shd"/>
-                    </constraints>
-                </view>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QhD-DV-Vla" customClass="VideoControlsView" customModule="YoutubeDL" customModuleProvider="target">
-                    <rect key="frame" x="10" y="313.5" width="394" height="30"/>
-                    <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="30" id="k8S-Ph-Zhi"/>
-                    </constraints>
-                </view>
             </subviews>
             <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
             <constraints>
-                <constraint firstItem="QhD-DV-Vla" firstAttribute="centerX" secondItem="FQh-RT-Aiu" secondAttribute="centerX" id="0q3-1Q-Cy9"/>
-                <constraint firstItem="E8h-SA-kV3" firstAttribute="centerX" secondItem="FQh-RT-Aiu" secondAttribute="centerX" id="9HE-sa-E8A"/>
-                <constraint firstItem="F1w-QK-TSc" firstAttribute="top" secondItem="QhD-DV-Vla" secondAttribute="bottom" constant="10" id="EY0-CN-v5C"/>
-                <constraint firstItem="F1w-QK-TSc" firstAttribute="width" secondItem="FQh-RT-Aiu" secondAttribute="width" constant="-20" id="FDP-Sa-pMW"/>
-                <constraint firstItem="QhD-DV-Vla" firstAttribute="width" secondItem="FQh-RT-Aiu" secondAttribute="width" constant="-20" id="Pl9-A2-ifV"/>
-                <constraint firstItem="E8h-SA-kV3" firstAttribute="width" secondItem="zot-me-eYY" secondAttribute="width" id="QBQ-9x-Tbr"/>
-                <constraint firstItem="F1w-QK-TSc" firstAttribute="centerX" secondItem="FQh-RT-Aiu" secondAttribute="centerX" id="QUB-gb-rRC"/>
-                <constraint firstItem="E8h-SA-kV3" firstAttribute="top" secondItem="79k-Nf-jQh" secondAttribute="bottom" id="a7q-DC-dyj"/>
-                <constraint firstItem="zot-me-eYY" firstAttribute="height" secondItem="FQh-RT-Aiu" secondAttribute="height" multiplier="0.3" id="c78-FI-wfJ"/>
-                <constraint firstItem="zot-me-eYY" firstAttribute="top" secondItem="FQh-RT-Aiu" secondAttribute="top" id="fTb-fG-NWo"/>
-                <constraint firstItem="zot-me-eYY" firstAttribute="width" secondItem="FQh-RT-Aiu" secondAttribute="width" constant="-20" id="kbI-1R-Pdq"/>
-                <constraint firstItem="zot-me-eYY" firstAttribute="centerX" secondItem="FQh-RT-Aiu" secondAttribute="centerX" id="pOk-ya-OV9"/>
-                <constraint firstItem="QhD-DV-Vla" firstAttribute="top" secondItem="zot-me-eYY" secondAttribute="bottom" constant="24" id="vBF-p7-BER"/>
+                <constraint firstItem="VIw-MO-Blm" firstAttribute="width" secondItem="FQh-RT-Aiu" secondAttribute="width" constant="-20" id="8zv-o3-eAc"/>
+                <constraint firstItem="F1w-QK-TSc" firstAttribute="centerX" secondItem="FQh-RT-Aiu" secondAttribute="centerX" id="WsC-AD-oUb"/>
+                <constraint firstItem="F1w-QK-TSc" firstAttribute="width" relation="lessThanOrEqual" secondItem="fO9-WW-xd3" secondAttribute="width" constant="40" id="Yfr-Wg-Zsl"/>
+                <constraint firstItem="VIw-MO-Blm" firstAttribute="height" secondItem="FQh-RT-Aiu" secondAttribute="height" multiplier="0.3" id="f32-38-vi0"/>
+                <constraint firstItem="VIw-MO-Blm" firstAttribute="top" secondItem="FQh-RT-Aiu" secondAttribute="top" id="pvh-P3-rje"/>
+                <constraint firstItem="F1w-QK-TSc" firstAttribute="top" secondItem="VIw-MO-Blm" secondAttribute="bottom" constant="8" id="rpD-0B-g2S"/>
+                <constraint firstItem="VIw-MO-Blm" firstAttribute="centerX" secondItem="FQh-RT-Aiu" secondAttribute="centerX" id="wzC-CP-axT"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="FQh-RT-Aiu"/>
             <point key="canvasLocation" x="131.8840579710145" y="718.52678571428567"/>
