--- a/YoutubeDL/storyboards/AVVideoPlayerView.xib
+++ b/YoutubeDL/storyboards/AVVideoPlayerView.xib
@@ -1,21 +1,36 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="AVVideoPlayerView" customModule="YoutubeDL" customModuleProvider="target">
+            <connections>
+                <outlet property="videoLoadingProgress" destination="mwb-hR-0pM" id="Beq-Xp-zXJ"/>
+            </connections>
+        </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB">
             <rect key="frame" x="0.0" y="0.0" width="561" height="323"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+            <subviews>
+                <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" progress="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="mwb-hR-0pM">
+                    <rect key="frame" x="0.0" y="321" width="561" height="2"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="2" id="CNB-RS-CLM"/>
+                    </constraints>
+                </progressView>
+            </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <constraints>
+                <constraint firstAttribute="bottom" secondItem="mwb-hR-0pM" secondAttribute="bottom" id="0Hp-w6-gx5"/>
+                <constraint firstAttribute="trailing" secondItem="mwb-hR-0pM" secondAttribute="trailing" id="Hi0-Et-U2p"/>
+                <constraint firstItem="mwb-hR-0pM" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="ZAU-tc-M3h"/>
+            </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <point key="canvasLocation" x="-110.86956521739131" y="-22.433035714285712"/>
         </view>
     </objects>
