--- a/YoutubeDL/storyboards/VideoPlayerViewController.xib
+++ b/YoutubeDL/storyboards/VideoPlayerViewController.xib
@@ -7,13 +7,19 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="VideoPlayerViewController" customModule="YoutubeDL" customModuleProvider="target"/>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="VideoPlayerViewController" customModule="YoutubeDL" customModuleProvider="target">
+            <connections>
+                <outlet property="thumbnailView" destination="yrf-Ln-0AU" id="OXN-dA-Q6b"/>
+                <outlet property="videoControlsView" destination="fZZ-g1-FrK" id="8jR-0m-kks"/>
+                <outlet property="videoPlayerView" destination="vig-1c-2Zb" id="lCf-41-QY8"/>
+            </connections>
+        </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB">
             <rect key="frame" x="0.0" y="0.0" width="634" height="393"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vig-1c-2Zb" userLabel="VideoPlayerView" customClass="AVVideoPlayerView">
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vig-1c-2Zb" userLabel="VideoPlayerView" customClass="AVVideoPlayerView" customModule="YoutubeDL" customModuleProvider="target">
                     <rect key="frame" x="5" y="5" width="624" height="324"/>
                     <subviews>
                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="yrf-Ln-0AU" userLabel="Thumbnail View">
